--- a/monitor/index.html
+++ b/monitor/index.html
@@ -47,7 +47,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Todos los derechos reservados Esteban Misael Bautista Arreola &copy; 2024</p>
+    <p>Todos los derechos reservados HNIH &copy; 2024</p>
   </footer>
 
   <script src="js/main.js"></script>
